Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "countries = ['Croatia', 'USA', 'Argentina', 'France', 'Brazil', 'Japan', 'Vietnam', 'Israel']\n",
-    "cities = [Zgreb, "
+    "cities = [Zagreb, District of Columbia "
    ]
   },
   {
