--- a/index.ipynb
+++ b/index.ipynb
@@ -527,8 +527,8 @@
     }
    ],
    "source": [
-    "example_dictionary = {'first_name': \"Terrance\", 'last_name': \"KOAR\", 'favorite_language': \"Python\"}\n",
-    "print(example_dictionary.items())\n",
+    "\n",
+    "print(example_dictionary.items())example_dictionary = {'first_name': \"Terrance\", 'last_name': \"KOAR\", 'favorite_language': \"Python\"}\n",
     "type(example_dictionary.items())"
    ]
   },
